card component created

--- a/src/assets/components/index.scss
+++ b/src/assets/components/index.scss
@@ -1,6 +1,6 @@
 @import "../variables/variable.scss";
 @import "./styledButton.scss";
-@import "./MA/button.scss";
-@import "./MA/Header.scss";
-@import "./MA/paragraph.scss";
-@import "./MA/card.scss";
+@import "./button.scss";
+// @import "./Header.scss";
+@import "./paragraph.scss";
+@import "./card.scss";
